[package]
name = "ntat"
version = "0.1.0"
edition = "2021"

[dependencies]
# Unified Elliptic Curve Math (Removed 'rand_core' as dalek-ng doesn't use it as a feature flag)
curve25519-dalek-ng = { version = "4.1.1", features = ["alloc", "serde"] }

# Bulletproofs & Zero-Knowledge Transcripts
bulletproofs = "4"
merlin = "3"

# Randomness & Hashing
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Parallelism & Performance
rayon = "1"
mimalloc = "0.1" 

criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"           
codegen-units = 1     
panic = "abort"

[[bench]]
name = "bulletproof_bench"
harness = false
